# CCA-attestation

./: .gitignore  README.md
configs/: FastModels_crypto_11.26.011_Linux64.tgz  FastModels_crypto_11.26.011_Linux64_armv8l.tgz  linux.config  rmm.img  sc_hf.patch
docs/: agl-realm-attestation-demo.md  client.md  env-setup.md  realm-shim-design.md  vm-hypervisor-setup-and-measurement.md  zephyr-realm-adapter-design.md  zephyr-realm-porting-todo.md  zephyr-realm-porting-worklog.md
patches/: README.md  kvmtool-cca-realm-zephyr-attestation.patch
scripts/: agl_download.sh  bootfvp.sh  build-agl-attest-verifier.sh  build-agl-realm-attest-demo.sh  build-agl.sh  build-hafnium.sh  build-kvmtool-arm64.sh  build-linux.sh  build-opencsd.sh  build-optee-client.sh  build-optee-examples.sh  build-optee-os.sh  build-realm-baremetal.sh  build-realm-shim.sh  build-realm-zephyr-shim-bundle.sh  build-rmm.sh  (+22 more)
src/vecu_zephyr/: CMakeLists.txt  prj.conf  prj.headless.conf  prj.minishell.conf  prj.shell.conf  realm_payload_entry.ld
src/vecu_zephyr/boards/arm64/lkvm_realm/: Kconfig.board  Kconfig.defconfig  lkvm_realm.dts  lkvm_realm_defconfig
src/vecu_zephyr/boards/arm64/lkvm_realm_payload/: Kconfig.board  Kconfig.defconfig  lkvm_realm_payload.dts  lkvm_realm_payload_defconfig
src/vecu_zephyr/dts/bindings/: vendor-prefixes.txt
src/vecu_zephyr/dts/bindings/serial/: lkvm,realm-uart.yaml
src/vecu_zephyr/soc/arm64/qemu_cortex_a53/: Kconfig.defconfig  mmu_regions.c
src/vecu_zephyr/src/: main.c  payload_entry.S  payload_mmu.c  realm_timer.c  realm_uart.c  rsi.c  rsi.h  rsi_asm.S
(+86 files in other folders)
